<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddEditSocioActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- ConstraintLayout para botón Volver y título -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp">

            <!-- Botón Volver -->
            <Button
                android:id="@+id/btnVolver"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:drawable/ic_menu_revert"
                android:gravity="center"
                android:contentDescription="@string/back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Título centrado -->
            <TextView
                android:id="@+id/textoTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_edit_socio_title"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Nombre -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_name"
            android:autofillHints="name"
            android:inputType="textPersonName"/>

        <!-- Apellido -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_last_name"
            android:autofillHints="name"
            android:inputType="textPersonName"/>

        <!-- DNI -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dni"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_document"
            android:inputType="number"
            tools:ignore="Autofill" />

        <!-- Correo -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/add_email"
            android:inputType="textEmailAddress" />

        <!-- Teléfono -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:hint="@string/add_phone"
            android:inputType="phone" />

        <!-- Cuota Mensual -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_fee"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editCuota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_monthly_fee"
            android:inputType="numberDecimal"
            tools:ignore="Autofill" />

        <!-- CheckBox Apto Físico -->
        <CheckBox
            android:id="@+id/checkAptoFisico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fitness"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/fitness_label" />

        <!-- CheckBox Carnet Entregado -->
        <CheckBox
            android:id="@+id/checkCarnetEntregado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/card_label" />

        <!-- CheckBox Pago al Día -->
        <CheckBox
            android:id="@+id/checkPagoAlDia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_payment"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/daily_payment_label" />

        <!-- Botón Confirmar -->
        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/confirm"
            android:background="@drawable/button_background"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>
</ScrollView>