<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    tools:context="com.example.clubdeportivog3.activities.SignInActivity">

    <!-- Imagen en la parte superior -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="193dp"
        android:layout_height="246dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_inicio" />

    <!-- Espacio flexible para empujar los elementos hacia abajo -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Campo de correo -->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:autofillHints="emailAddress"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" />

    <!-- Campo de contraseña -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:autofillHints="password"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/checkBoxMostrarPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_contrasena" />


    <!-- Botón Ingresar -->
    <Button
        android:id="@+id/buttonIngresar"
        android:layout_width="144dp"
        android:layout_height="62dp"
        android:layout_marginTop="48dp"
        android:text="@string/log_in" />

    <!-- Texto de registro -->
    <TextView
        android:id="@+id/textViewRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register_not_account"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp" />

    <!-- Espacio flexible para mantener el contenido centrado verticalmente -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>