<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    tools:context=".activities.SignUpActivity">

    <!-- Título -->
    <TextView
        android:id="@+id/textViewBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif"
        android:text="@string/registration_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <!-- Campo de correo -->
    <EditText
        android:id="@+id/editTextEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:autofillHints="emailAddress"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" />

    <!-- Campo de contraseña -->
    <EditText
        android:id="@+id/editTextPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:autofillHints="password"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <!-- Campo de confirmación de contraseña -->
    <EditText
        android:id="@+id/editTextConfirmRegister"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:autofillHints="password"
        android:hint="@string/enter_password_again"
        android:inputType="textPassword" />

    <!-- Botón Registrar -->
    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="193dp"
        android:layout_height="73dp"
        android:layout_marginTop="56dp"
        android:fontFamily="serif"
        android:text="@string/registration"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:typeface="normal"
        />

    <!-- Texto de ingresar -->
    <TextView
        android:id="@+id/textViewIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/log_in_if_account"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp" />

    <!-- Espacio flexible para empujar el contenido hacia arriba -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>